--- a/templates/pages/venues.html
+++ b/templates/pages/venues.html
@@ -1,15 +1,16 @@
 {% extends 'layouts/main.html' %}
 {% block title %}Fyyur | Venues{% endblock %}
 {% block content %}
-{% for area in areas %}
-<h3>{{ area.city }}, {{ area.state }}</h3>
+{% for item in items %}
+<h3>{{ item.city.name }}, {{ item.city.state.code }}</h3>
 	<ul class="items">
-		{% for venue in area.venues %}
+		{% for venue in item.venues %}
 		<li>
 			<a href="/venues/{{ venue.id }}">
 				<i class="fas fa-music"></i>
 				<div class="item">
 					<h5>{{ venue.name }}</h5>
+					<p>{{ venue.num_upcoming_shows }} upcoming shows</p>
 				</div>
 			</a>
 		</li>
