--- a/templates/pages/artists.html
+++ b/templates/pages/artists.html
@@ -8,6 +8,7 @@
 			<i class="fas fa-users"></i>
 			<div class="item">
 				<h5>{{ artist.name }}</h5>
+				<p>{{ artist.num_upcoming_shows }} upcoming shows</p>
 			</div>
 		</a>
 	</li>
