--- a/templates/forms/new_venue.html
+++ b/templates/forms/new_venue.html
@@ -9,13 +9,13 @@
         {{ form.name(class_ = 'form-control', autofocus = true) }}
       </div>
       <div class="form-group">
-          <label>City & State</label>
+          <label>State & City</label>
           <div class="form-inline">
             <div class="form-group">
-              {{ form.city(class_ = 'form-control', placeholder='City', autofocus = true) }}
+              {{ form.state(class_ = 'form-control', placeholder='State', autofocus = true) }}
             </div>
             <div class="form-group">
-              {{ form.state(class_ = 'form-control', placeholder='State', autofocus = true) }}
+              {{ form.city(class_ = 'form-control', placeholder='City', autofocus = true) }}
             </div>
           </div>
       </div>
@@ -53,11 +53,24 @@
              {{ form.seeking_talent(placeholder='Venue', autofocus = true) }}
        </div>
 
-       <div class="form-group">
+       <div class="form-group seeking-description-holder hidden">
             <label for="seeking_description">Seeking Description</label>
             {{ form.seeking_description(class_ = 'form-control', placeholder='Description', autofocus = true) }}
        </div>
       <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
+
+  <script>
+    window.addEventListener('DOMContentLoaded', function () {
+      $(document).on('change', '#seeking_talent', function () {
+        let holder = $('.seeking-description-holder');
+        if ($(this).is(':checked')) {
+          holder.removeClass('hidden');
+        } else {
+          holder.addClass('hidden');
+        }
+      });
+    });
+  </script>
 {% endblock %}
