--- a/templates/pages/show_venue.html
+++ b/templates/pages/show_venue.html
@@ -75,7 +75,6 @@
 	</div>
 </section>
 
+<button class="btn btn-danger btn-lg delete-venue" data-id="{{ venue.id }}">Delete</button>
 <a href="/venues/{{ venue.id }}/edit"><button class="btn btn-primary btn-lg">Edit</button></a>
-
 {% endblock %}
-
