[fix] Edit Form

--- a/templates/forms/new_artist.html
+++ b/templates/forms/new_artist.html
@@ -44,6 +44,7 @@
 
     <div class="form-group">
       <label for="seeking_venue">Looking for Venues</label>
+      <input type="hidden" name="seeking_venue" value="n">
       {{ form.seeking_venue(placeholder='Venue', autofocus = true) }}
     </div>
 
