--- a/templates/forms/new_venue.html
+++ b/templates/forms/new_venue.html
@@ -49,6 +49,7 @@
 
        <div class="form-group">
              <label for="seeking_talent">Looking for Talent</label>
+             <input type="hidden" name="seeking_talent" value="n">
              {{ form.seeking_talent(placeholder='Venue', autofocus = true) }}
        </div>
 
