--- a/templates/forms/edit_venue.html
+++ b/templates/forms/edit_venue.html
@@ -42,12 +42,13 @@
        </div>
 
        <div class="form-group">
-              <label for="website_link">Website Link</label>
-              {{ form.website_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+            <label for="website_link">Website Link</label>
+            {{ form.website_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
         </div>
 
         <div class="form-group">
              <label for="seeking_talent">Looking for Talent</label>
+             <input type="hidden" name="seeking_talent" value="n">
              {{ form.seeking_talent(placeholder='Venue', autofocus = true) }}
         </div>
 
