[feat] Form Validation

--- a/templates/forms/edit_venue.html
+++ b/templates/forms/edit_venue.html
@@ -1,90 +1,155 @@
 {% extends 'layouts/main.html' %}
 {% block title %}Edit Venue{% endblock %}
 {% block content %}
-  <div class="form-wrapper">
-    <form class="form" method="post" action="/venues/{{venue.id}}/edit">
-      <h3 class="form-heading">Edit venue <em>{{ venue.name }}</em> <a href="{{ url_for('index') }}" title="Back to homepage"><i class="fa fa-home pull-right"></i></a></h3>
-      <div class="form-group">
-        <label for="name">Name</label>
-        {{ form.name(class_ = 'form-control', autofocus = true) }}
-      </div>
-      <div class="form-group">
-          <label>State & City</label>
-          <div class="form-inline">
-            <div class="form-group">
-              {{ form.state(class_ = 'form-control', placeholder='State', autofocus = true) }}
-            </div>
-            <div class="form-group">
-              {{ form.city(class_ = 'form-control', placeholder='City', autofocus = true) }}
-            </div>
-          </div>
-      </div>
-      <div class="form-group">
-        <label for="address">Address</label>
-        {{ form.address(class_ = 'form-control', autofocus = true) }}
-      </div>
-      <div class="form-group">
-          <label for="phone">Phone</label>
-          {{ form.phone(class_ = 'form-control', placeholder='xxx-xxx-xxxx', autofocus = true) }}
-        </div>
-      <div class="form-group">
-        <label for="genres">Genres</label>
-        {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', autofocus = true) }}
-      </div>
-      <div class="form-group">
-          <label for="facebook_link">Facebook Link</label>
-          {{ form.facebook_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
-       </div>
-      
-       <div class="form-group">
-          <label for="image_link">Image Link</label>
-          {{ form.image_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
-       </div>
+<div class="form-wrapper">
+  <form class="form" method="post" action="/venues/{{venue.id}}/edit">
+    <h3 class="form-heading">Edit venue <em>{{ venue.name }}</em> <a href="{{ url_for('index') }}"
+        title="Back to homepage"><i class="fa fa-home pull-right"></i></a></h3>
+    <div class="form-group">
+      <label for="name">Name</label>
+      {{ form.name(class_ = 'form-control', autofocus = true) }}
 
-       <div class="form-group">
-            <label for="website_link">Website Link</label>
-            {{ form.website_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
-        </div>
-
-        <div class="form-group">
-             <label for="seeking_talent">Looking for Talent</label>
-             <input type="hidden" name="seeking_talent" value="n">
-             {{ form.seeking_talent(placeholder='Venue', autofocus = true) }}
-        </div>
-
-        <div class="form-group">
-            <label for="seeking_description">Seeking Description</label>
-            {{ form.seeking_description(class_ = 'form-control', autofocus = true) }}
-          </div>
-      
-      <input type="submit" value="Edit Venue" class="btn btn-primary btn-lg btn-block">
-    </form>
-  </div>
-
-  <script>
-    window.addEventListener('DOMContentLoaded', function () {
-      $('#name').val('{{ venue.name }}');
-      $('#phone').val('{{ venue.phone }}');
-      $('#address').val('{{ venue.address }}');
-
-      $('#state').val('{{ venue.city.state_code }}');
-      $('#city').data('val', '{{ venue.city.id }}');
-
-      let genres = [];
-      {% for genre in venue.genres %}
-        genres.push('{{ genre.id }}');
+      {% for error in form.name.errors %}
+      <ul class="error-list text-danger">
+        <li>{{ error }}</li>
+      </ul>
       {% endfor %}
-      $('#genres').val(genres);
+    </div>
+    <div class="form-group">
+      <label>State & City</label>
+      <div class="form-inline">
+        <div class="form-group">
+          {{ form.state(class_ = 'form-control', placeholder='State', autofocus = true) }}
+        </div>
+        <div class="form-group">
+          {{ form.city(class_ = 'form-control', placeholder='City', autofocus = true) }}
+        </div>
+      </div>
 
-      $('#facebook_link').val('{{ venue.facebook_link }}');
-      $('#image_link').val('{{ venue.image_link }}');
-      $('#website_link').val('{{ venue.website }}');
+      {% for error in form.state.errors %}
+      <ul class="error-list text-danger">
+        <li>{{ error }}</li>
+      </ul>
+      {% endfor %}
 
-      {% if venue.seeking_talent %}
-        $('#seeking_talent').trigger('click');
-      {% endif %}
+      {% for error in form.city.errors %}
+      <ul class="error-list text-danger">
+        <li>{{ error }}</li>
+      </ul>
+      {% endfor %}
+    </div>
+    <div class="form-group">
+      <label for="address">Address</label>
+      {{ form.address(class_ = 'form-control', autofocus = true) }}
 
-      $('#seeking_description').val('{{ venue.seeking_description }}');
-    });
-  </script>
+      {% for error in form.address.errors %}
+      <ul class="error-list text-danger">
+        <li>{{ error }}</li>
+      </ul>
+      {% endfor %}
+    </div>
+    <div class="form-group">
+      <label for="phone">Phone</label>
+      {{ form.phone(class_ = 'form-control', placeholder='xxx-xxx-xxxx', autofocus = true) }}
+
+      {% for error in form.phone.errors %}
+      <ul class="error-list text-danger">
+        <li>{{ error }}</li>
+      </ul>
+      {% endfor %}
+    </div>
+    <div class="form-group">
+      <label for="genres">Genres</label>
+      {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', autofocus = true) }}
+
+      {% for error in form.genres.errors %}
+      <ul class="error-list text-danger">
+        <li>{{ error }}</li>
+      </ul>
+      {% endfor %}
+    </div>
+    <div class="form-group">
+      <label for="facebook_link">Facebook Link</label>
+      {{ form.facebook_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+
+      {% for error in form.facebook_link.errors %}
+      <ul class="error-list text-danger">
+        <li>{{ error }}</li>
+      </ul>
+      {% endfor %}
+    </div>
+    <div class="form-group">
+      <label for="image_link">Image Link</label>
+      {{ form.image_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+
+      {% for error in form.image_link.errors %}
+      <ul class="error-list text-danger">
+        <li>{{ error }}</li>
+      </ul>
+      {% endfor %}
+    </div>
+
+    <div class="form-group">
+      <label for="website_link">Website Link</label>
+      {{ form.website_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+
+      {% for error in form.website_link.errors %}
+      <ul class="error-list text-danger">
+        <li>{{ error }}</li>
+      </ul>
+      {% endfor %}
+    </div>
+
+    <div class="form-group">
+      <label for="seeking_talent">Looking for Talent</label>
+      <input type="hidden" name="seeking_talent" value="n">
+      {{ form.seeking_talent(placeholder='Venue', autofocus = true) }}
+
+      {% for error in form.seeking_talent.errors %}
+      <ul class="error-list text-danger">
+        <li>{{ error }}</li>
+      </ul>
+      {% endfor %}
+    </div>
+
+    <div class="form-group">
+      <label for="seeking_description">Seeking Description</label>
+      {{ form.seeking_description(class_ = 'form-control', autofocus = true) }}
+
+      {% for error in form.seeking_description.errors %}
+      <ul class="error-list text-danger">
+        <li>{{ error }}</li>
+      </ul>
+      {% endfor %}
+    </div>
+    <input type="submit" value="Edit Venue" class="btn btn-primary btn-lg btn-block">
+  </form>
+</div>
+
+<script>
+  window.addEventListener('DOMContentLoaded', function () {
+    $('#name').val('{{ venue.name }}');
+    $('#phone').val('{{ venue.phone }}');
+    $('#address').val('{{ venue.address }}');
+
+    $('#state').val('{{ venue.city.state_code }}');
+    $('#city').data('val', '{{ venue.city.id }}');
+
+    let genres = [];
+    {% for genre in venue.genres %}
+    genres.push('{{ genre.id }}');
+    {% endfor %}
+    $('#genres').val(genres);
+
+    $('#facebook_link').val('{{ venue.facebook_link }}');
+    $('#image_link').val('{{ venue.image_link }}');
+    $('#website_link').val('{{ venue.website }}');
+
+    {% if venue.seeking_talent %}
+    $('#seeking_talent').trigger('click');
+    {% endif %}
+
+    $('#seeking_description').val('{{ venue.seeking_description }}');
+  });
+</script>
 {% endblock %}
