--- a/templates/forms/edit_artist.html
+++ b/templates/forms/edit_artist.html
@@ -1,85 +1,140 @@
 {% extends 'layouts/main.html' %}
 {% block title %}Edit Artist{% endblock %}
 {% block content %}
-  <div class="form-wrapper">
-    <form class="form" method="post" action="/artists/{{artist.id}}/edit">
-      <h3 class="form-heading">Edit artist <em>{{ artist.name }}</em></h3>
-      <div class="form-group">
-        <label for="name">Name</label>
-        {{ form.name(class_ = 'form-control', autofocus = true) }}
-      </div>
-      <div class="form-group">
-          <label>State & City</label>
-          <div class="form-inline">
-            <div class="form-group">
-              {{ form.state(class_ = 'form-control', placeholder='State', autofocus = true) }}
-            </div>
-            <div class="form-group">
-              {{ form.city(class_ = 'form-control', placeholder='City', autofocus = true) }}
-            </div>
-          </div>
-      </div>
-      <div class="form-group">
-          <label for="phone">Phone</label>
-          {{ form.phone(class_ = 'form-control', placeholder='xxx-xxx-xxxx', autofocus = true) }}
-        </div>
-      <div class="form-group">
-        <label for="genres">Genres</label>
-        {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', autofocus = true) }}
-      </div>
-      <div class="form-group">
-          <label for="facebook_link">Facebook Link</label>
-          {{ form.facebook_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
-        </div>
-      
-      <div class="form-group">
-          <label for="image_link">Image Link</label>
-          {{ form.image_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
-      </div>
+<div class="form-wrapper">
+  <form class="form" method="post" action="/artists/{{artist.id}}/edit">
+    <h3 class="form-heading">Edit artist <em>{{ artist.name }}</em></h3>
+    <div class="form-group">
+      <label for="name">Name</label>
+      {{ form.name(class_ = 'form-control', autofocus = true) }}
 
-      <div class="form-group">
-            <label for="website_link">Website Link</label>
-            {{ form.website_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
-      </div>
-
-      <div class="form-group">
-          <label for="seeking_venue">Looking for Venues</label>
-          <input type="hidden" name="seeking_venue" value="n">
-          {{ form.seeking_venue(placeholder='Venue', autofocus = true) }}
-      </div>
-
-      <div class="form-group">
-          <label for="seeking_description">Seeking Description</label>
-          {{ form.seeking_description(class_ = 'form-control', autofocus = true) }}
-      </div>
-      
-      <input type="submit" value="Edit Artist" class="btn btn-primary btn-lg btn-block">
-    </form>
-  </div>
-
-  <script>
-    window.addEventListener('DOMContentLoaded', function () {
-      $('#name').val('{{ artist.name }}');
-      $('#phone').val('{{ artist.phone }}');
-
-      $('#state').val('{{ artist.city.state_code }}');
-      $('#city').data('val', '{{ artist.city.id }}');
-
-      let genres = [];
-      {% for genre in artist.genres %}
-        genres.push('{{ genre.id }}');
+      {% for error in form.name.errors %}
+      <ul class="error-list text-danger">
+        <li>{{ error }}</li>
+      </ul>
       {% endfor %}
-      $('#genres').val(genres);
+    </div>
+    <div class="form-group">
+      <label>State & City</label>
+      <div class="form-inline">
+        <div class="form-group">
+          {{ form.state(class_ = 'form-control', placeholder='State', autofocus = true) }}
+        </div>
+        <div class="form-group">
+          {{ form.city(class_ = 'form-control', placeholder='City', autofocus = true) }}
+        </div>
+      </div>
 
-      $('#facebook_link').val('{{ artist.facebook_link }}');
-      $('#image_link').val('{{ artist.image_link }}');
-      $('#website_link').val('{{ artist.website }}');
+      {% for error in form.state.errors %}
+      <ul class="error-list text-danger">
+        <li>{{ error }}</li>
+      </ul>
+      {% endfor %}
 
-      {% if artist.seeking_venue %}
-        $('#seeking_venue').trigger('click');
-      {% endif %}
+      {% for error in form.city.errors %}
+      <ul class="error-list text-danger">
+        <li>{{ error }}</li>
+      </ul>
+      {% endfor %}
+    </div>
+    <div class="form-group">
+      <label for="phone">Phone</label>
+      {{ form.phone(class_ = 'form-control', placeholder='xxx-xxx-xxxx', autofocus = true) }}
 
-      $('#seeking_description').val('{{ artist.seeking_description }}');
-    });
-  </script>
+      {% for error in form.phone.errors %}
+      <ul class="error-list text-danger">
+        <li>{{ error }}</li>
+      </ul>
+      {% endfor %}
+    </div>
+    <div class="form-group">
+      <label for="genres">Genres</label>
+      {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', autofocus = true) }}
+
+      {% for error in form.genres.errors %}
+      <ul class="error-list text-danger">
+        <li>{{ error }}</li>
+      </ul>
+      {% endfor %}
+    </div>
+    <div class="form-group">
+      <label for="facebook_link">Facebook Link</label>
+      {{ form.facebook_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+
+      {% for error in form.facebook_link.errors %}
+      <ul class="error-list text-danger">
+        <li>{{ error }}</li>
+      </ul>
+      {% endfor %}
+    </div>
+    <div class="form-group">
+      <label for="image_link">Image Link</label>
+      {{ form.image_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+
+      {% for error in form.image_link.errors %}
+      <ul class="error-list text-danger">
+        <li>{{ error }}</li>
+      </ul>
+      {% endfor %}
+    </div>
+    <div class="form-group">
+      <label for="website_link">Website Link</label>
+      {{ form.website_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+
+      {% for error in form.website_link.errors %}
+      <ul class="error-list text-danger">
+        <li>{{ error }}</li>
+      </ul>
+      {% endfor %}
+    </div>
+    <div class="form-group">
+      <label for="seeking_venue">Looking for Venues</label>
+      <input type="hidden" name="seeking_venue" value="n">
+      {{ form.seeking_venue(placeholder='Venue', autofocus = true) }}
+
+      {% for error in form.seeking_venue.errors %}
+      <ul class="error-list text-danger">
+        <li>{{ error }}</li>
+      </ul>
+      {% endfor %}
+    </div>
+    <div class="form-group">
+      <label for="seeking_description">Seeking Description</label>
+      {{ form.seeking_description(class_ = 'form-control', autofocus = true) }}
+
+      {% for error in form.seeking_description.errors %}
+      <ul class="error-list text-danger">
+        <li>{{ error }}</li>
+      </ul>
+      {% endfor %}
+    </div>
+    <input type="submit" value="Edit Artist" class="btn btn-primary btn-lg btn-block">
+  </form>
+</div>
+
+<script>
+  window.addEventListener('DOMContentLoaded', function () {
+    $('#name').val('{{ artist.name }}');
+    $('#phone').val('{{ artist.phone }}');
+
+    $('#state').val('{{ artist.city.state_code }}');
+    $('#city').data('val', '{{ artist.city.id }}');
+
+    let genres = [];
+    {% for genre in artist.genres %}
+    genres.push('{{ genre.id }}');
+    {% endfor %}
+    $('#genres').val(genres);
+
+    $('#facebook_link').val('{{ artist.facebook_link }}');
+    $('#image_link').val('{{ artist.image_link }}');
+    $('#website_link').val('{{ artist.website }}');
+
+    {% if artist.seeking_venue %}
+    $('#seeking_venue').trigger('click');
+    {% endif %}
+
+    $('#seeking_description').val('{{ artist.seeking_description }}');
+  });
+</script>
 {% endblock %}
